--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
     "react-native-gesture-handler": "~2.20.2",
-    "react-native-gifted-charts": "^1.4.59",
+    "react-native-gifted-charts": "^1.4.60",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.12.0",
@@ -45,7 +45,8 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "victory-native": "^41.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
